# ifscraper

./: .gitignore  memes.json  pushshift.py  pyproject.toml  requirements.txt  scrape.py  update.py
