[tool.poetry]
name = "ifscraper"
version = "0.1.0"
description = "simple utilities to scrape memes from imgflip.com"
authors = ["Rik Bose <rbose@knox.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.61.2"
urllib3 = "^1.26.6"
argparse = "^1.4.0"
requests-html = "^0.10.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
